--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "jest-styled-components": "^6.2.2",
     "react-test-renderer": "^16.6.0"
   }
