--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@smooth-ui/core-sc": "^7.0.4",
     "axios": "^0.18.0",
+    "next": "^7.0.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-redux": "^5.1.0",
